--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "tailwindcss": "^3.3.0"
+  },
+  "engines": {
+    "node": ">=18.17.0"
   }
 }
