--- a/amplify.yml
+++ b/amplify.yml
@@ -1,24 +1,17 @@
+version: 1
 frontend:
   phases:
     preBuild:
       commands:
-        - nvm install 14.17.0
-        - nvm use 14.17.0
+        - nvm install 18.17.0
         - npm install -g yarn@1.22.0
-    artifacts:
-      baseDirectory: /
-      files:
-        - "**/*"
-  build:
-    commands:
-      - echo "Building started on `date`"
-      - npx tsc
+    build:
+      commands:
+        - yarn build
+  artifacts:
+    baseDirectory: out
+    files:
+      - "**/*"
   cache:
     paths:
       - "node_modules/**/*"
-preBuild:
-  commands:
-    - echo "Installing source NPM dependencies"
-    - nvm install 14.17.0
-    - nvm use 14.17.0
-    - npm install
