--- a/amplify.yml
+++ b/amplify.yml
@@ -1,10 +1,17 @@
 version: 1
 frontend:
-  preBuild:
-    commands:
-      - npm install
-  build:
-    commands:
-      - npm run build
+  phases:
+    preBuild:
+      commands:
+        - nvm install 18.17.0
+        - npm install -g yarn@1.22.0
+    build:
+      commands:
+        - npm run build
   artifacts:
-    baseDirectory: .next
+    baseDirectory: out
+    files:
+      - "**/*"
+  cache:
+    paths:
+      - "node_modules/**/*"
