--- a/amplify.yml
+++ b/amplify.yml
@@ -5,8 +5,11 @@ frontend:
       commands:
         - nvm install 18.17.0
         - npm install -g yarn@1.22.0
+        - npm install -g --quiet yarn@1.22.0
+
     build:
       commands:
+        - npm install -g --quiet yarn@1.22.0
         - npm run build
   artifacts:
     baseDirectory: out
